--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Adam Bielas portfolio</title>
+    <title>Adam Bielas</title>
 </head>
 <body>
     <header>
@@ -63,6 +63,7 @@
             </section>
         </section>
         <section class="right">
+            <!-- pusty dla zachowania tej samej szerokości z obu stron -->
         </section>
     </div>
     
