--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Adam Bielas</title>
 </head>
 <body>
     <header>
-        Adam Bielas portfolio
+        <h1>Adam Bielas portfolio</h1>
     </header>
     <div id="container">
         <section class="menu">
-            MENU
+            <i class="fa fa-bars" aria-hidden="true"></i>
         </section>
         <section class="content">
             <p>
