--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Adam Bielas</title>
 </head>
@@ -17,7 +17,11 @@
     </header>
     <div id="container">
         <section class="menu">
-            <i class="fa fa-bars" aria-hidden="true"></i>
+            <i class="fa fa-bars" aria-hidden="true" style="font-size: 150%;"></i><br>
+            <i class="fa fa-envelope-o" aria-hidden="true" style="font-size:150%;"></i><br>
+            <i class="fa fa-question" aria-hidden="true" style="font-size:150%;"></i><br>
+            <i class="fa fa-moon-o" aria-hidden="true" style="font-size:150%;"></i><br>
+            <i class="fa fa-sun-o" aria-hidden="true" style="font-size:150%; margin-top: auto;"></i>
         </section>
         <section class="content">
             <p>
