--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Lofffkiiii</title>
+    <title>Adam Bielas</title>
 </head>
-<body>
-    <!-- <header>
+<body>Kocham Cię UwU
+    <header>
         <h1>Adam Bielas portfolio</h1>
     </header>
     <div id="container">
@@ -71,9 +71,9 @@
             </section>
         </section>
         <section class="right">
-            <-- pusty dla zachowania tej samej szerokości z obu stron -->
-        <!--</section>
-    </div> -->
-    Kocham Cię UwU
+            <!-- pusty dla zachowania tej samej szerokości z obu stron  -->
+        </section>
+    </div>
+    
 </body>
 </html>
