--- a/social.html
+++ b/social.html
@@ -21,7 +21,7 @@
             <i class="fa fa-envelope-o" aria-hidden="true" style="font-size:150%;"></i><br>
             <i class="fa fa-question" aria-hidden="true" style="font-size:150%;"></i><br>
             <i class="fa fa-moon-o" aria-hidden="true" style="font-size:150%;"></i><br>
-            <i class="fa fa-sun-o" aria-hidden="true" style="font-size:150%; margin-top: auto;"></i>
+            <i class="fa fa-sun-o" aria-hidden="true" style="font-size:150%;"></i>
         </section>
         <section class="content">
             <p>
@@ -67,7 +67,7 @@
                 Vivamus malesuada non erat eget ullamcorper. Nunc aliquet dignissim euismod. Praesent venenatis, tortor eu dapibus lobortis, turpis tellus venenatis nisl, in eleifend ipsum lorem quis risus. Duis lobortis gravida neque. Ut sodales tincidunt vehicula. Quisque egestas pulvinar sapien vitae sodales. Morbi laoreet justo et efficitur maximus. Phasellus augue lorem, lacinia et mauris non, scelerisque tempus est.
             </p>
             <section class="footer">
-            Adam Bielas &copy;
+                <a href="index.html">Adam Bielas</a>&copy;     
             </section>
         </section>
         <section class="right">
